# nerd-dictation

./: .editorconfig  .gitignore  Indian version for vosk-model  changelog.rst  default.nix  hacking.rst  nerd-dictation  nerd-dictation.service  pyproject.toml  readme-sox.rst  readme-ydotool.rst  readme.rst  setup.py  shell.nix  using-ydotool.rst
_misc/: readme_update_helptext.py
examples/: nerd-dictation.py
examples/begin_end_commands/: nerd-dictation.py
examples/default/: nerd-dictation.py
examples/language-tool-auto-grammar/: nerd-dictation.py
examples/language_tool_auto_grammar/: nerd-dictation.py
examples/vosk-grammar/: nerd-dictation.py
examples/vosk_grammar/: nerd-dictation.py  vosk-grammar.json
package/: readme.rst
package/guix/: readme.rst
package/nix/: default.nix  readme.rst  shell.nix
package/nix/nix/: sources.json
package/pipx/: readme.rst
package/python/: readme.rst  setup.py
package/python/pip/: readme.rst  setup.py
package/python/pipx/: pyproject.toml  readme.rst
tests/: from_words_to_digits.py
